# multigrid_solvers_application

./: CMakeLists.txt  CMakeLists2.txt  Doxyfile  MultigridSolversApplication.py  contributors.txt  multigrid_solvers_application.cpp  multigrid_solvers_application.h
custom_linear_solvers/: gauss_seidel_iterative_solver.h  jacobi_iterative_solver.h  multilevel_preconditioner.h  multilevel_solver.h  vanka_smoother.h
custom_python/: add_amg_to_python.cpp  add_amg_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  add_gmg_to_python.cpp  add_gmg_to_python.h  add_level_to_python.cpp  add_level_to_python.h  add_linear_solvers_to_python.cpp  add_linear_solvers_to_python.h  multigrid_solvers_python_application.cpp
custom_utilities/: amg_level.h  amg_utils.h  gmg_level.h  gmg_structured_solver_factory.h  gmg_utils.h  index_based_mg_projector.h  matrix_based_mg_level.h  matrix_based_mg_projector.h  mesh_based_mg_projector.h  mg_level.h  mg_null_projector.h  mg_projector.h  mg_transpose_projector.h  multi_index.h  multilevel_solver_factory.h  parameter_list.h  ruge_stueben_solver_factory.h  smoothed_aggregation_solver_factory.h  structured_matrix_based_mg_prolongator.h  structured_matrix_based_mg_restrictor.h  structured_mesh_matrix_based_mg_interpolator.h  structured_mesh_matrix_based_mg_transpose_interpolator.h  structured_mesh_mg_injector.h  structured_mesh_mg_interpolator.h  structured_mesh_mg_projector.h  structured_mesh_mg_transpose_interpolator.h  structured_mg_prolongator.h  structured_mg_restrictor.h
external_includes/pyamg/: graph.h  linalg.h  relaxation.h  ruge_stuben.h  smoothed_aggregation.h
external_includes/scipy/sparse/sparsetools/: csr.h
python_scripts/: gmg_newton_raphson_strategy.py
test_examples/: poisson.py
